--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ h6 {
 
 .text_1 li::before {
   content: "";
-  background: url(/img/check_icon_346.png) 0 0 no-repeat;
+  background: url(../img/check_icon_346.png) 0 0 no-repeat;
   position: absolute;
   width: 25px;
   height: 20px;
@@ -171,5 +171,38 @@ h6 {
   position: relative;
   left: 507px;
   bottom: 131px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.uu {
+  width: 1280px;
+  height: 1819px;
+  border: 1px solid black;
+  margin: 0 auto;
+  position: relative;
+  left: 55px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 970px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
