--- a/style.scss
+++ b/style.scss
@@ -77,6 +77,7 @@ h6 {
   font-weight: 400;
 }
 
+
 .header {
   width: 1280px;
   height: 323px;
@@ -119,7 +120,7 @@ h6 {
 
 .text_1 li::before {
   content: "";
-  background: url(/img/check_icon_346.png) 0 0 no-repeat;
+  background: url(../img/check_icon_346.png) 0 0 no-repeat;
   position: absolute;
   width: 25px;
   height: 20px;
@@ -170,6 +171,14 @@ margin: 0 auto;
 padding: 0 15px;
 }
 
+.uu {
+  width: 1280px;
+  height: 1819px;
+  border: 1px solid black;
+  margin: 0 auto;
+  position: relative;
+  left: 55px;
+}
 
   @media (max-width: 1200px) {
     .container {
